--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,7 @@
                     console.log('Sending request to backend...', requestData);
 
                     // Call your Flask backend API
-                    const response = await fetch('http://ai-image-backend.onrender.com/api/generate-image', {
+                    const response = await fetch('https://ai-image-backend-h9et.onrender.com/api/generate-image', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -155,7 +155,7 @@
             // Test backend connection
             const testConnection = async () => {
                 try {
-                    const response = await fetch('https://ai-image-backend.onrender.com/api/health');;
+                    const response = await fetch('https://ai-image-backend-h9et.onrender.com/api/health');;
                     const data = await response.json();
                     setError(`✅ Backend connected: ${data.message}`);
                 } catch (err) {
