--- a/frontend/index.html
+++ b/frontend/index.html
@@ -304,8 +304,12 @@
                                         {error}
                                     </div>
                                 )}
-                                <h3 className="mt-4 p-4 bg-red-500/20 border border-red-500/30 rounded-lg text-red-200">⏳ Please wait at least 50 seconds before generating the next image. The model needs time to reset due to resource limits.
-</h3>
+                               {generatedImage && (
+  <h3 className="text-yellow-300 text-sm mt-2">
+    ⏳ Please wait at least 50 seconds before generating the next image.
+  </h3>
+)}
+
                             </div>
 
                             {/* Preview Panel */}
