--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <style>
         body {
             margin: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',Fprompt
                 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
                 sans-serif;
         }
@@ -26,7 +26,7 @@
         const { useState } = React;
 
         const ImageGenerator = () => {
-            const [prompt, setPrompt] = useState('A mystical forest with glowing butterflies and magical light beams');
+            const [prompt, setPrompt] = useState('Prompt something bizarre… “Penguins skydiving over a desert rave 🎈🐧🔥”');
             const [negativePrompt, setNegativePrompt] = useState('');
             const [isGenerating, setIsGenerating] = useState(false);
             const [generatedImage, setGeneratedImage] = useState(null);
@@ -194,7 +194,7 @@
                                 <div className="mb-6">
                                     <label className="block text-white font-medium mb-2">Prompt</label>
                                     <textarea
-                                        value={prompt}
+                                         placeholder={prompt}
                                         onChange={(e) => setPrompt(e.target.value)}
                                         className="w-full p-4 bg-white/20 border border-white/30 rounded-lg text-white placeholder-white/60 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent resize-none"
                                         rows="4"
