--- a/frontend/index.html
+++ b/frontend/index.html
@@ -176,12 +176,7 @@
                                 <span className="text-yellow-400 text-3xl">✨</span>
                             </div>
                             <p className="text-blue-200 text-lg">Transform your imagination into stunning visuals</p>
-                            <button
-                                onClick={testConnection}
-                                className="mt-2 px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg text-sm"
-                            >
-                                Test Backend Connection
-                            </button>
+                            {/*<button onClick={testConnection}className="mt-2 px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg text-sm">Test Backend Connection</button>*/}
                         </div>
 
                         <div className="grid lg:grid-cols-2 gap-8">
